# base

./: .gitignore  README.md  run_gaden.sh  run_sim.sh
RRT-Infotaxis/: README.md  gas_dispersion.ipynb  requirements.txt
adsm/: CMakeLists.txt  package.xml
adsm/include/adsm/: adsm.h  frontier_finder.h  goal.h  gridmap.h  rrt_sampler.h
adsm/launch/: adsm_launch.py
adsm/src/: adsm.cpp  frontier_finder.cpp  goal.cpp  gridmap.cpp  rrt_sampler.cpp
ali_igdm/: CLAUDE.md  DECAY_THRESHOLD_PLAN.md  package.xml  setup.cfg  setup.py
ali_igdm/ali_igdm/: igdm.py
ali_igdm/new/: rrt_updated.py
cfd_wind_pipeline/: .gitignore  EXPERIMENT_LOG.md  README.md  build_library.py  cfd_library_env.py  cfd_library_loader.py  config.py  extract_wind.py  gen_case.py  gen_case_from_gaden.py  library_stats.py  parse_doors.py  placement.py  prune_mesh.py  train_with_cfd_library.py
cfd_wind_pipeline/sbatch/: run_array.sh  run_case.sh  run_smoke.sh  train_cfd_library.sh
cfd_wind_pipeline/viz/: viz_gaden_wind.py  viz_library.py  viz_placements.py  viz_robot_scenario.py  viz_wind.py
eesa/: package.xml  setup.cfg  setup.py
eesa/eesa/: banana.py  main.py  map_client.py  robot_client.py
eesa/launch/: eesa_launch.py
efe_igdm/: CHANGES_SUMMARY.md  CLAUDE.md  DEAD_END_CONVERGENCE_FIX.md  DEAD_END_DETECTION.md  EARLY_CONVERGENCE_FIX.md  GLOBAL_LOCAL_SWITCH_BUG.md  IMPROVEMENTS_REPORT.md  MULTI_SOURCE_RECOMMENDATIONS.md  SLAM_OUTLET_DETECTION_PLAN.md  TELEPORT_FEATURE.md  TROUBLESHOOTING.md  VISUALIZATION_GUIDE.md  WIND_GAS_MODEL_OPTIONS.md  WIND_MULTISOURCE_RESEARCH.md  extracted_paper.txt  package.xml  setup.cfg  setup.py
efe_igdm/config/: nav2_goal_checker.yaml  rviz_topdown_capture.rviz
efe_igdm/efe_igdm/: __init__.py  igdm.py  (+14 more)
gaden_maps/: recommended_configs.yaml
gaden_transfer/: README.md  package.xml  setup.cfg  setup.py
igdm_multiple/: MULTI_SOURCE_PLAN.md  package.xml  setup.cfg  setup.py
infotaxis/: README.md  package.xml  setup.cfg  setup.py
patches/: README.md  test_env_launch.patch
reinforcement_learning/: FILAMENT_BUGS.md  PLAN.md  README.md  config.py  debug_gas_visual.py  eval_gaden.sh  package.xml  setup.py  test_agent.py  test_env.py  test_env_visual.py  test_filament_plume.py  test_gas_readings.py  test_map_generator.py  train_dual_loop_spatial.sh
rl_5_channel/: PLAN.md  README.md  SPATIAL_ARCH_PLAN.md  SPATIAL_CHANGES.md  config.py  eval_gaden.sh  eval_spatial.sh  train_dual_div.sh  train_dual_div_fresh.sh  train_spatial.sh  train_spatial_div.sh  train_spatial_ent.sh
rl_cfd/: README.md  config.py  eval_cfd.sh  eval_gaden.sh  train_cfd.sh  train_cfd_div.sh  train_cfd_rebalanced.sh  viz_fast_bundle.py  viz_motion_channel.py
rrt_infotaxis/: package.xml  setup.cfg  setup.py
rrt_infotaxis/gas/: deneme.py
rrt_infotaxis/igdm/: occupancy_grid.py  particle_filter.py  rrt.py  rrt_infotaxis_igdm.py  rrt_infotaxis_igdm_large_map.py  rrt_infotaxis_igdm_with_obstacle.py  sensor_model.py  visualizer.py
rrt_infotaxis/igdm_improved/: __init__.py  adaptive_rrt_infotaxis_igdm_large_map_discrete.py  adaptive_rrt_infotaxis_igdm_rooms_discrete.py  analyze_results.py  directional_planner.py  igdm_model.py  make_vid.py  particle_filter.py  rrt.py  rrt_extended_penalty.py  rrt_infotaxis_igdm_improved.py  rrt_infotaxis_igdm_improved_large_map.py  rrt_infotaxis_igdm_improved_large_map_directional.py  rrt_infotaxis_igdm_improved_large_map_discrete.py  rrt_infotaxis_igdm_improved_large_map_discrete_extended_penalty.py  rrt_infotaxis_igdm_improved_large_map_discrete_less_extended_penalty.py  rrt_infotaxis_igdm_improved_no_obs.py  rrt_infotaxis_igdm_improved_rooms.py  rrt_infotaxis_igdm_improved_rooms_directional.py  rrt_infotaxis_igdm_improved_rooms_discrete.py  rrt_infotaxis_igdm_improved_rooms_discrete_extended_penalty.py  rrt_infotaxis_igdm_improved_rooms_discrete_less_extended_penalty.py  rrt_infotaxis_igdm_large_map.py  rrt_less_extended_penalty.py  rrt_updated.py  run_large_map_parallel.py  run_large_map_sequential.py  run_rooms_parallel.py  run_rooms_sequential.py  sensor_model_discrete.py  simal_1room.py  simal_3room.py  simal_adaptive_1room.py  simal_adaptive_3rooms.py  simal_adaptive_obstacle.py  simal_obstacle.py  test_rrt_infotaxis_igdm.py  together_run.py  updated_rrt_infotaxis_igdm_large_map_discrete.py  updated_rrt_infotaxis_igdm_rooms_discrete.py  (+3 more)
rrt_infotaxis/igdm_time_weighted/: __init__.py  rrt_time_weighted.py  sensor_model_discrete.py  updated_weighted_rrt_infotaxis_igdm_large_map_discrete.py  updated_weighted_rrt_infotaxis_igdm_large_map_discrete_periodic.py  updated_weighted_rrt_infotaxis_igdm_rooms_discrete.py  updated_weighted_rrt_infotaxis_igdm_rooms_discrete_periodic.py  visualizer.py
rrt_infotaxis/rrt_infotaxis/: discrete_particle_filter.py  discrete_rrt_infotaxis.py  gaussian_plume.py  occupancy_grid.py  particle_filter.py  particle_filter_optimized.py  rrt.py  rrt_infotaxis.py  sensor_model.py  test_ideal.py  text_visualizer.py  unit_conversion.py
rrt_infotaxis/scripts/: plot_entropy.py
scripts/: presim.sh  run_adsm_eesa.sh  runsim.sh
wind_visualizer/: package.xml  quickstart.txt  setup.cfg  setup.py
wind_visualizer/launch/: wind_visualizer.launch.py
wind_visualizer/wind_visualizer/: wind_viz_node.py
(+253 files in other folders)
